--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.0.0",
     "node-sass": "^4.12.0",
     "node-sass-x64": "^3.5.6",
     "react": "^16.9.0",
